# polyform-puzzle-solver

./: README.md  pyproject.toml  solve.py
polyform_puzzle_solver/: __init__.py  grid.py  polyform.py  puzzle.py
puzzles/Polyhex/: 4x12-4p-1.yaml  4x8-3p-1.yaml  4x9-3p-1.yaml
puzzles/Polyomino/: 1x2-3p-1.yaml  2x1-3p-1.yaml  2x3-3p-1.yaml  3x4-2p-1.yaml  3x4-2p-2.yaml  3x4-5p-1.yaml  4x8-4p-1.yaml  4x8-4p-2.yaml  4x8-8p-1.yaml  5x7-8p-1.yaml  5x8-8p-1.yaml  6x8-8p-1.yaml  6x9-8p-1.yaml  ubongo-mini.yaml
tests/: test_grid.py  test_load_puzzle.py  test_polyform.py  test_puzzle.py
